force-app/main/default/objects/Insurance_Plan__c/Insurance_Plan__c.object-meta.xml
<CustomObject>
    <description>Stores health insurance plan catalogue used by the Insurance Plan Discovery Agent for pre-sales plan search, comparison, and recommendation.</description>
    <label>Insurance Plan</label>
    <nameField>
        <label>Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurance Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>