force-app/main/default/objects/Insurance_Plan__c/fields/Annual_Deductible__c.field-meta.xml
<CustomField>
    <fullName>Annual_Deductible__c</fullName>
    <label>Annual Deductible</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>