force-app/main/default/objects/Insurance_Plan__c/fields/Key_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Key_Benefits__c</fullName>
    <label>Key Benefits</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>