force-app/main/default/objects/Insurance_Plan__c/fields/Max_Age__c.field-meta.xml
<CustomField>
    <fullName>Max_Age__c</fullName>
    <label>Maximum Eligible Age</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>