force-app/main/default/objects/Insurance_Plan__c/fields/Max_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Max_Coverage__c</fullName>
    <label>Max Coverage (Sum Insured)</label>
    <precision>14</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>