force-app/main/default/objects/Insurance_Plan__c/fields/Max_Family_Size__c.field-meta.xml
<CustomField>
    <fullName>Max_Family_Size__c</fullName>
    <label>Maximum Family Size</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>