force-app/main/default/objects/Insurance_Plan__c/fields/Monthly_Premium__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Premium__c</fullName>
    <label>Monthly Premium</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>