force-app/main/default/objects/Insurance_Plan__c/fields/Network_Type__c.field-meta.xml
<CustomField>
    <fullName>Network_Type__c</fullName>
    <label>Network Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>HMO</fullName><default>false</default><label>HMO</label></value>
            <value><fullName>PPO</fullName><default>true</default><label>PPO</label></value>
            <value><fullName>TPA</fullName><default>false</default><label>TPA</label></value>
            <value><fullName>EPO</fullName><default>false</default><label>EPO</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>