force-app/main/default/objects/Insurance_Plan__c/fields/Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Plan_Type__c</fullName>
    <label>Plan Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Individual</fullName><default>true</default><label>Individual</label></value>
            <value><fullName>Family</fullName><default>false</default><label>Family</label></value>
            <value><fullName>Senior</fullName><default>false</default><label>Senior</label></value>
            <value><fullName>Group Corporate</fullName><default>false</default><label>Group Corporate</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>