force-app/main/default/objects/Insurance_Plan__c/fields/Pre_Existing_Covered__c.field-meta.xml
<CustomField>
    <fullName>Pre_Existing_Covered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-Existing Conditions Covered</label>
    <type>Checkbox</type>
</CustomField>