force-app/main/default/objects/Insurance_Plan__c/fields/Pre_Existing_Waiting_Period_Years__c.field-meta.xml
<CustomField>
    <fullName>Pre_Existing_Waiting_Period_Years__c</fullName>
    <label>Pre-Existing Waiting Period (Years)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>