force-app/main/default/objects/Insurance_Plan__c/fields/Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Short_Description__c</fullName>
    <label>Short Description</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>